add one sample page

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">지수함수와 로그함수:</h6>
-            <a class="dropdown-item" href="login.html">1) 지수</a>
+            <a class="dropdown-item" href="high_second_01.html">1) 지수</a>
             <a class="dropdown-item" href="register.html">2) 로그</a>
             <a class="dropdown-item" href="forgot-password.html">3) 지수함수</a>
             <a class="dropdown-item" href="forgot-password.html">4) 로그함수</a>
@@ -148,11 +148,27 @@
             <a class="dropdown-item" href="404.html">1) 등차수열과 등비수열</a>
             <a class="dropdown-item" href="blank.html">2) 수열의 합</a>
             <a class="dropdown-item" href="blank.html">3) 수학적 귀납법</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">함수의 극한과 연속: </h6>
+            <a class="dropdown-item" href="404.html">1) 함수의 극한</a>
+            <a class="dropdown-item" href="blank.html">2) 함수의 연속</a>
+            <div class="dropdown-divider"></div>
+            <h6 class="dropdown-header">미분: </h6>
+            <a class="dropdown-item" href="404.html">1) 미분계수와 도함수</a>
+            <a class="dropdown-item" href="blank.html">2) 도함수의 활용(1)</a>
+            <a class="dropdown-item" href="blank.html">3) 도함수의 활용(2)</a>
+            <a class="dropdown-item" href="blank.html">4) 도함수의 활용(3)</a>
+            <h6 class="dropdown-header">적분: </h6>
+            <a class="dropdown-item" href="404.html">1) 부정적분</a>
+            <a class="dropdown-item" href="blank.html">2) 정적분</a>
+            <a class="dropdown-item" href="blank.html">3) 정적분의 활용</a>
+
+
           </div>
         </li>
       </ul>
 
-      
+
       <div id="content-wrapper">
 
         <div class="container-fluid">
